// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alarm w/ ghost 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <div
      class="Itemstyles__Box-sc-1dxtwiv-0 juVrZJ"
    >
      <div
        class="Itemstyles__Label-sc-1dxtwiv-1 lpUFm"
      >
        Пол
      </div>
      <div
        class="Itemstyles__Icon-sc-1dxtwiv-2 jfGbwv"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <div
      class="Itemstyles__Box-sc-1dxtwiv-0 juVrZJ"
    >
      <div
        class="Itemstyles__Label-sc-1dxtwiv-1 haXSsx"
      >
        Рост очень высокий
      </div>
      <div
        class="Itemstyles__Icon-sc-1dxtwiv-2 jfGbwv"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <div
      class="Itemstyles__Box-sc-1dxtwiv-0 juVrZJ"
    >
      <div
        class="Itemstyles__Label-sc-1dxtwiv-1 lpUFm"
      >
        Вес
      </div>
      <div
        class="Itemstyles__Icon-sc-1dxtwiv-2 jfGbwv"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alarm w/ primary 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <div
      class="Itemstyles__Box-sc-1dxtwiv-0 kYIhvW"
    >
      <div
        class="Itemstyles__Label-sc-1dxtwiv-1 lpUFm"
      >
        Пол
      </div>
      <div
        class="Itemstyles__Icon-sc-1dxtwiv-2 jfGbwv"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <div
      class="Itemstyles__Box-sc-1dxtwiv-0 kYIhvW"
    >
      <div
        class="Itemstyles__Label-sc-1dxtwiv-1 haXSsx"
      >
        Рост очень высокий
      </div>
      <div
        class="Itemstyles__Icon-sc-1dxtwiv-2 jfGbwv"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <div
      class="Itemstyles__Box-sc-1dxtwiv-0 kYIhvW"
    >
      <div
        class="Itemstyles__Label-sc-1dxtwiv-1 lpUFm"
      >
        Вес
      </div>
      <div
        class="Itemstyles__Icon-sc-1dxtwiv-2 jfGbwv"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M12 13.414l-7.293 7.293-1.414-1.414L10.586 12 3.293 4.707l1.414-1.414L12 10.586l7.293-7.293 1.414 1.414L13.414 12l7.293 7.293-1.414 1.414L12 13.414z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
